--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>cms_h</title>
+    <title>宁夏水务投资集团有限公司后台发布系统</title>
   </head>
   <body>
     <div id="wrap"></div>
